--- a/server/config/config.json
+++ b/server/config/config.json
@@ -6,6 +6,14 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
+  "unitTest": {
+    "username": "root",
+    "password": "root",
+    "database": "todosunittesting",
+    "host": "127.0.0.1",
+    "dialect": "mysql",
+    "logging": false
+  },
   "test": {
     "username": "root",
     "password": null,
